2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/25_passer_int_print.deca
// Description :
//     passer un int a print   
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024


{
    int x = 1 ;
    print(x); 
}